@@ -18,6 +18,8 @@ package org.castor.jdo.util;
 import java.util.Enumeration;
 import java.util.Properties;
 
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
 import org.castor.jdo.conf.Database;
 import org.castor.jdo.conf.DatabaseChoice;
 import org.castor.jdo.conf.DataSource;
@@ -26,6 +28,13 @@ import org.castor.jdo.conf.JdoConf;
 import org.castor.jdo.conf.Mapping;
 import org.castor.jdo.conf.Param;
 import org.castor.jdo.conf.TransactionDemarcation;
+import org.exolab.castor.mapping.MappingException;
+import org.exolab.castor.util.DTDResolver;
+import org.exolab.castor.xml.MarshalException;
+import org.exolab.castor.xml.Unmarshaller;
+import org.exolab.castor.xml.ValidationException;
+import org.xml.sax.EntityResolver;
+import org.xml.sax.InputSource;
 
 /**
  * Factory to create JDO configurations without the need of a database configuration
@@ -58,6 +67,45 @@ import org.castor.jdo.conf.TransactionDemarcation;
 public final class JDOConfFactory {
     //--------------------------------------------------------------------------
 
+    /** Temporary note to check for the changed jdo-conf syntax. */
+    private static final String NOTE_096 =
+        "NOTE: JDO configuration syntax has changed with castor 0.9.6, "
+      + "please see http://castor.codehaus.org/release-notes.html for details";
+  
+    /** The <a href="http://jakarta.apache.org/commons/logging/">Jakarta
+     *  Commons Logging</a> instance used for all logging. */
+    private static final Log LOG = LogFactory.getLog(JDOConfFactory.class);
+    
+    /**
+     * Creates a JdoConf instance from a SAX InputSource, using a Castor XML
+     * Unmarshaller.
+     * @param source SAX input source representing the JDO configuration.
+     * @param resolver SAX entity resolver
+     * @param loader Class loader
+     * @return The unmarshalled JdoConf instance.
+     * @throws MappingException
+     */
+    public static JdoConf createJdoConf(
+            final InputSource source,
+            final EntityResolver resolver,
+            final ClassLoader loader) throws MappingException {
+        
+        // Load the JDO configuration file from the specified input source.
+        JdoConf jdoConf = null;
+        
+        Unmarshaller unmarshaller = new Unmarshaller(JdoConf.class);
+        try {
+            unmarshaller.setEntityResolver(new DTDResolver(resolver));
+            jdoConf = (JdoConf) unmarshaller.unmarshal(source);
+        } catch (MarshalException e) {
+            LOG.info(NOTE_096);
+            throw new MappingException(e); 
+        } catch (ValidationException e) {
+            throw new MappingException(e);
+        }
+
+        return jdoConf;
+    }
     /**
      * Create a JDO configuration with local transaction demarcation and given database.
      * 
